--- a/module2/Практика_numpy.ipynb
+++ b/module2/Практика_numpy.ipynb
@@ -60,24 +60,24 @@
       "source": [
         "array = np.arange(1, 13)\n",
         "print(array)\n",
-        "print(\"Розмір:\", array.size)\n",
+        "print(\"Розмір:\", array.shape)\n",
         "print(\"Тип:\", array.dtype)"
       ],
       "metadata": {
         "id": "02EdQMKlOZHr",
-        "outputId": "03486681-4bc7-4bdb-ad76-59a597fd6115",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "450136cd-786e-4414-cfb1-0e09eee74f04"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n",
-            "Розмір: 12\n",
+            "Розмір: (12,)\n",
             "Тип: int64\n"
           ]
         }
@@ -126,10 +126,10 @@
       ],
       "metadata": {
         "id": "mrbnfiPQPu_n",
-        "outputId": "263bd63a-aee2-4f15-f07e-cffc15894f25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "263bd63a-aee2-4f15-f07e-cffc15894f25"
       },
       "execution_count": 13,
       "outputs": [
@@ -167,10 +167,10 @@
       ],
       "metadata": {
         "id": "RGA3022VQIZV",
-        "outputId": "51d62c04-b4b9-4627-d48c-e994738742b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51d62c04-b4b9-4627-d48c-e994738742b8"
       },
       "execution_count": 11,
       "outputs": [
